LOGCXX-305: Property/DOMConfigurator::configureAndWatch can continue to run after APR termination