src/main/cpp/aprinitializer.cpp
@@ -21,9 +21,12 @@
 #include <log4cxx/helpers/aprinitializer.h>
 #include <apr_pools.h>
 #include <apr_atomic.h>
-#include <apr_time.h>
 #include <assert.h>
 #include <log4cxx/helpers/threadspecificdata.h>
+#include <apr_thread_mutex.h>
+#include <apr_thread_proc.h>
+#include <log4cxx/helpers/synchronized.h>
+#include <log4cxx/helpers/filewatchdog.h>
 
 using namespace log4cxx::helpers;
 using namespace log4cxx;
@@ -37,7 +40,7 @@ namespace {
 	}
 }
 
-APRInitializer::APRInitializer() {
+APRInitializer::APRInitializer() : p(0), mutex(0), startTime(0), tlsKey(0) {
     apr_initialize();
     apr_pool_create(&p, NULL);
     apr_atomic_init(p);
@@ -45,10 +48,22 @@ APRInitializer::APRInitializer() {
 #if APR_HAS_THREADS
     apr_status_t stat = apr_threadkey_private_create(&tlsKey, tlsDestruct, p);
     assert(stat == APR_SUCCESS);
+    stat = apr_thread_mutex_create(&mutex, APR_THREAD_MUTEX_NESTED, p);
+    assert(stat == APR_SUCCESS);
 #endif
 }
 
 APRInitializer::~APRInitializer() {
+    {
+#if APR_HAS_THREADS
+        synchronized sync(mutex);
+#endif
+        for(std::vector<FileWatchdog*>::iterator iter = watchdogs.begin();
+            iter != watchdogs.end();
+            iter++) {
+            delete *iter;
+        }
+    }
     apr_terminate();
     isDestructed = true;
 }
@@ -69,5 +84,13 @@ apr_pool_t* APRInitializer::getRootPool() {
 
 apr_threadkey_t* APRInitializer::getTlsKey() {
    return getInstance().tlsKey;
+}
+
+void APRInitializer::registerCleanup(FileWatchdog* watchdog) {
+    APRInitializer& instance(getInstance());
+#if APR_HAS_THREADS
+    synchronized sync(instance.mutex);
+#endif
+    instance.watchdogs.push_back(watchdog);
 }
 
