src/main/include/log4cxx/helpers/aprinitializer.h
@@ -22,28 +22,44 @@
 #error "aprinitializer.h should only be included by log4cxx implementation"
 #endif
 
-#include <log4cxx/helpers/pool.h>
-#include <apr_pools.h>
-#include <apr_thread_proc.h>
+#include <vector>
+
+extern "C" {
+typedef struct apr_thread_mutex_t apr_thread_mutex_t;
+typedef struct apr_threadkey_t apr_threadkey_t;
+}
+
+#include <apr_time.h>
 
 namespace log4cxx
 {
   namespace helpers
   {
+    class FileWatchdog;
+    
     class APRInitializer
     {
     public:
-    static log4cxx_time_t initialize();
+    static apr_time_t initialize();
     static apr_pool_t* getRootPool();
     static apr_threadkey_t* getTlsKey();
     static bool isDestructed;
+    
+    /**
+     *  Register a FileWatchdog for deletion prior to
+     *    APR termination.  FileWatchdog must be 
+     *    allocated on heap and not deleted elsewhere.
+     */
+    static void registerCleanup(FileWatchdog* watchdog);
 
     private:
       APRInitializer();
       APRInitializer(const APRInitializer&);
       APRInitializer& operator=(const APRInitializer&);
       apr_pool_t* p;
-      log4cxx_time_t startTime;
+      apr_thread_mutex_t* mutex;
+      std::vector<FileWatchdog*> watchdogs; 
+      apr_time_t startTime;
       apr_threadkey_t* tlsKey;
       static APRInitializer& getInstance();
 
